Fixed module tests