@@ -10,6 +10,25 @@
 
 	<artifactId>webrtc-java</artifactId>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						--add-opens webrtc.java/dev.onvoid.webrtc=ALL-UNNAMED
+						--add-opens webrtc.java/dev.onvoid.webrtc.logging=ALL-UNNAMED
+						--add-opens webrtc.java/dev.onvoid.webrtc.media=ALL-UNNAMED
+						--add-opens webrtc.java/dev.onvoid.webrtc.media.audio=ALL-UNNAMED
+						--add-opens webrtc.java/dev.onvoid.webrtc.media.video=ALL-UNNAMED
+					</argLine>
+					<forkCount>2</forkCount>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<profiles>
 		<profile>
 			<id>linux-x86_64</id>
